--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,14 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@model List<Recipe>
+
+<h1>Recipes</h1>
+
+<ul>
+    @foreach (var r in Model)
+            {
+                <li>@r.RecipeID - @r.RecipeTitle</li>
+
+            }
+</ul>
